# FinNews-RAG

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  app.py  evaluate.py  pyproject.toml  requirement.txt  requirements.txt
doc/: PROJECT_GUIDE.md  june-weekly-schedule.md  project-overview.md  session-report-2026-06-01.md  ship-c-chunking.md  ship-g-judge-eval.md  ship-h-config-sweep.md  ship-h-findings.md  ship-i-streamlit-polish.md
output/: financial_briefing_2026-06-01.html  financial_briefing_2026-06-01.md
src/: config.py  pipeline.py
src/evaluation/: harness.py  judge.py  judge_cache.py  sweep.py
src/ingestion/: __init__.py  news_api.py  search_news_sample.py  world_news_api.py
src/rag/: chunker.py
src/storage/: database.py  vector_store.py
src/summarization/: llm_client.py
tests/: smoke_ship_c.py  test_chunker.py  test_evaluation.py  test_judge.py  test_sweep.py
